refactor: simplify java-customer-service - remove logs, use .toList(), optimize mapping