@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -24,11 +23,8 @@ public class CustomerService {
 
     @Transactional
     public CustomerResponse createCustomer(CreateCustomerRequest request) {
-        log.info("Creating customer with email: {}", request.getEmail());
-
         if (customerRepository.existsByEmail(request.getEmail())) {
-            log.error("Email already exists: {}", request.getEmail());
-            throw new DuplicateCustomerException(request.getEmail(), "create customer");
+            throw new DuplicateCustomerException(request.getEmail(), "create");
         }
 
         Customer customer = new Customer();
@@ -37,43 +33,33 @@ public class CustomerService {
         customer.setEmail(request.getEmail());
         customer.setPhone(request.getPhone());
 
-        Customer savedCustomer = customerRepository.save(customer);
-        log.info("Customer created with id: {}", savedCustomer.getId());
-
-        return CustomerResponse.fromEntity(savedCustomer);
+        return CustomerResponse.fromEntity(customerRepository.save(customer));
     }
 
     @Transactional(readOnly = true)
     public CustomerResponse getCustomerById(Long id) {
-        log.info("Fetching customer with id: {}", id);
-
-        Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new CustomerNotFoundException(id));
-
-        return CustomerResponse.fromEntity(customer);
+        return CustomerResponse.fromEntity(
+                customerRepository.findById(id)
+                        .orElseThrow(() -> new CustomerNotFoundException(id))
+        );
     }
 
     @Transactional(readOnly = true)
     public List<CustomerResponse> getAllCustomers() {
-        log.info("Fetching all customers");
-
         return customerRepository.findAll()
                 .stream()
                 .map(CustomerResponse::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional
     public CustomerResponse updateCustomer(Long id, UpdateCustomerRequest request) {
-        log.info("Updating customer with id: {}", id);
-
         Customer customer = customerRepository.findById(id)
                 .orElseThrow(() -> new CustomerNotFoundException(id));
 
         if (request.getEmail() != null && !request.getEmail().equals(customer.getEmail())) {
             if (customerRepository.existsByEmail(request.getEmail())) {
-                log.error("Email already exists: {}", request.getEmail());
-                throw new DuplicateCustomerException(request.getEmail(), "update customer");
+                throw new DuplicateCustomerException(request.getEmail(), "update");
             }
             customer.setEmail(request.getEmail());
         }
@@ -88,20 +74,14 @@ public class CustomerService {
             customer.setPhone(request.getPhone());
         }
 
-        Customer updatedCustomer = customerRepository.save(customer);
-        log.info("Customer updated with id: {}", updatedCustomer.getId());
-
-        return CustomerResponse.fromEntity(updatedCustomer);
+        return CustomerResponse.fromEntity(customerRepository.save(customer));
     }
 
     @Transactional
     public void deleteCustomer(Long id) {
-        log.info("Deleting customer with id: {}", id);
-
-        Customer customer = customerRepository.findById(id)
-                .orElseThrow(() -> new CustomerNotFoundException(id));
-
-        customerRepository.delete(customer);
-        log.info("Customer deleted with id: {}", id);
+        customerRepository.delete(
+                customerRepository.findById(id)
+                        .orElseThrow(() -> new CustomerNotFoundException(id))
+        );
     }
 }
